# streaming-memory

./: .gitignore  .vercel-env-setup.sh  MEMORY_LESSONS.md  README.md  chat.py  longmemeval_adapter.py  longmemeval_retrieval.py  memory.py  pyproject.toml  requirements.txt  ryan_memories.json  test_modal_embeddings.py  vercel.json
data/: memory_cache.json  memory_cache_full.json  results.jsonl  results_10.jsonl  results_10_full.json  results_10_full.json.eval-results-gpt-4o  results_10_v2.jsonl  results_10_v2_full.json  results_10_v3.jsonl  results_10_v3_full.json  results_10_v3_full.json.eval-results-gpt-4o  results_10_v4.jsonl  results_10_v4_full.json  results_10_v4_full.json.eval-results-gpt-4o  results_50.jsonl  results_50_full.json  results_50_full.json.eval-results-gpt-4o  results_bench.jsonl  results_bench2.jsonl  results_bench2_full.json  results_bench_full.json  results_full.json
deployments/: __init__.py  aryan_tutor.py  family_assistant.py  livekit_agent.py  modal_base.py  voice_agent.py  websocket_agent.py
examples/: chat_aryan.py  chat_openai.py  dad_memories.json  longmemeval_eval.py  memories.json  modal_chat.py  modal_chat_aryan.py  modal_service.py  modal_streaming.py  parse_memories.py  preprocess_longmemeval.py  test_dad_memories.py  test_retrieval_modal.py  test_stuttering.py  test_stuttering_modal.py  test_websocket_agent.py
frontend/: index.html  package.json  tailwind.config.js  vercel.json  vite.config.js
scripts/: count_tokens.py  preprocess_aryan_summaries.py  test_latency.py
streaming_memory/: __init__.py  api.py  config.py  debug.py  (+7 more)
(+34 files in other folders)
